# C

./: README.md
lab_09_1/: CMakeLists.txt  check.c  check.h  makefile.txt  strcspn.c  strcspn.h  strlen.c  strlen.h  test.c
lab_09_2/: CMakeLists.txt  getline.c  getline.h  getlinetest.c  getlinetest.h  in_1.txt  in_2.txt  in_3.txt  main.c  makefile.txt  out_1.txt  out_2.txt  out_3.txt  res.txt  search_index.c  search_index.h  sstrcmp.c  sstrcmp.h  strcpy.c  strcpy.h  strreplace.c  strreplace.h  strreplacetest.c  strreplacetest.h  test.c
lab_10/: CMakeLists.txt  append.c  append.h  appendtest.c  appendtest.h  in_1.txt  in_2.txt  in_3.txt  in_4.txt  in_5.txt  insert_sort.c  insert_sort.h  list_funcs.c  list_funcs.h  main.c  makefile.txt  menu.c  menu.h  out_1.txt  out_2.txt  out_3.txt  out_4.txt  out_5.txt  out_6.txt  popbacktest.c  popbacktest.h  popend.c  popend.h  popfront.c  popfront.h  popfronttest.c  popfronttest.h  push.c  push.h  read_list.c  read_list.h  res.txt  sorttest.c  sorttest.h  struct.h  (+1 more)
lab_11/: CMakeLists.txt  format.txt  main.c  makefile.txt  my_snprintf.c  my_snprintf.h  test.c
lab_13/: CMakeLists.txt  add_rec.c  add_rec.h  berkli.c  berkli.h  comparator.c  comparator.h  del_rec.c  del_rec.h  edit_rec.c  edit_rec.h  filter.c  filter.h  in_1.txt  in_2.txt  in_3.txt  list.h  main.c  makefile.txt  menu.c  menu.h  out_1.txt  out_2.txt  out_3.txt  push_node.c  push_node.h  read_file.c  read_file.h  save_in_file.c  save_in_file.h  show.c  show.h  sort.c  sort.h  test.c  test1.c  test1.h  test2.c  test2.h  test3.c  (+1 more)
lab_14/: dequeue_n_enqueue_test.c  dequeue_n_enqueue_test.h  dequeue_test.c  dequeue_test.h  enqueue_test.c  enqueue_test.h  makefile.txt  queue.h  queue_array.c  queue_list.c  test.c
rk_03/: CMakeLists.txt  counting_words_in_file.c  counting_words_in_file.h  in_1.txt  in_2.txt  in_3.txt  main.c  makefile.txt  out_1.txt  out_2.txt  out_3.txt  print_struct.c  print_struct.h
rk_04/: CMakeLists.txt  add_elem.c  add_elem.h  delete_node.c  delete_node.h  free.c  free.h  main.c  (+10 more)
(+46 files in other folders)
